# dirwatch

./: .gitignore  pyproject.toml  readme.md  setup.py
dirwatch/: __init__.py
src/dirwatch/: __init__.py
