[project]
name = "dirwatch"
version = "0.1.0"
dependencies = ["pyfswatch @ git+https://github.com/paul-nameless/pyfswatch"]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
dirwatch = "dirwatch:entry_point"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"
files = ["src", "tests"]
strict = true
enable_error_code = "unreachable, redundant-expr, possibly-undefined, truthy-bool, truthy-iterable, unused-awaitable, explicit-override, mutable-override"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
target-version = ["py312"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
